--- a/A-Z/Exams/TestVision/22-23/1_Questions+Test_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/1_Questions+Test_22-23.html
@@ -25,64 +25,22 @@
             </tr>
             <tr style="height: 10px;">
                 <td style="width: 33.3033%; height: 10px; text-align: center;">
-                    <p><a class="inline_disabled" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/testvision-instructions-%257C-questions-and-test" data-api-returntype="Page"><img src="https://canvas.uva.nl/courses/8175/files/7105269/download" data-inst-icon-maker-icon="true" data-download-url="https://canvas.uva.nl/files/7105269/download?download_frd=1&amp;icon_maker_icon=1" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7105269" data-api-returntype="File" /></a>&nbsp; &nbsp; +&nbsp; &nbsp; <a class="inline_disabled" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/testvision-instructions-%257C-questions-and-test" data-api-returntype="Page"><img src="https://canvas.uva.nl/courses/8175/files/7105271/download" data-inst-icon-maker-icon="true" data-download-url="https://canvas.uva.nl/files/7105271/download?download_frd=1&amp;icon_maker_icon=1" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7105271" data-api-returntype="File" /></a></p>
-                    <p><img src="https://canvas.uva.nl/courses/8175/files/7096925/download" width="33" height="33" data-inst-icon-maker-icon="true" data-download-url="https://canvas.uva.nl/files/7096925/download?download_frd=1&amp;icon_maker_icon=1" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7096925" data-api-returntype="File" />&nbsp; 5 days before exam</p>
+                    <p><img src="https://canvas.uva.nl/courses/8175/files/7137617/download" width="130px" data-inst-icon-maker-icon="true" data-download-url="https://canvas.uva.nl/files/7137617" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7105269" data-api-returntype="File" /></p>
+                    <p><img src="https://canvas.uva.nl/courses/8175/files/7096925/download" width="40" height="40" data-inst-icon-maker-icon="true" data-download-url="https://canvas.uva.nl/files/7096925/download?download_frd=1&amp;icon_maker_icon=1" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7096925" data-api-returntype="File" />&nbsp; 5 days before exam</p>
                 </td>
                 <td style="width: 33.3033%; height: 10px; text-align: center;">
-                    <p><a class="inline_disabled" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-faq" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/testvision-instructions-%257C-faq" data-api-returntype="Page"><img src="https://canvas.uva.nl/courses/8175/files/7096939/download" data-inst-icon-maker-icon="true" data-download-url="https://canvas.uva.nl/files/7096939/download?download_frd=1&amp;icon_maker_icon=1" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7096939" data-api-returntype="File" /></a></p>
+                    <p><a class="inline_disabled" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination" target="_self" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/testvision-instructions-%257C-examination" data-api-returntype="Page"><img src="https://canvas.uva.nl/courses/8175/files/7137621/download" width="130px" data-inst-icon-maker-icon="true" data-download-url="https://canvas.uva.nl/files/7137621" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7137621" data-api-returntype="File" /></a></p>
                     <p>&nbsp;</p>
                 </td>
                 <td style="width: 33.3061%; height: 10px; text-align: center;">
-                    <p><a class="inline_disabled" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-assessment" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/testvision-instructions-%257C-assessment" data-api-returntype="Page"><img src="https://canvas.uva.nl/courses/8175/files/7105255/download" data-inst-icon-maker-icon="true" data-download-url="https://canvas.uva.nl/files/7105255/download?download_frd=1&amp;icon_maker_icon=1" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7105255" data-api-returntype="File" /></a></p>
+                    <p><a class="inline_disabled" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-assessment" target="_self" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/testvision-instructions-%257C-assessment" data-api-returntype="Page"><img src="https://canvas.uva.nl/courses/8175/files/7137622/download" width="130px" data-inst-icon-maker-icon="true" data-download-url="https://canvas.uva.nl/files/7137622/" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7137622" data-api-returntype="File" /></a></p>
                     <p>&nbsp;</p>
                 </td>
             </tr>
         </tbody>
     </table>
     <hr />
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <table style="border-collapse: collapse; width: 97.9535%; border-style: hidden; height: 585px;" border="0">
-        <tbody>
-            <tr style="height: 435px;">
-                <td style="width: 13.774%; height: 435px;">
-                    <p><img src="https://canvas.uva.nl/courses/8175/files/7096880/download" data-inst-icon-maker-icon="true" data-download-url="https://canvas.uva.nl/files/7096880/download?download_frd=1&amp;icon_maker_icon=1" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7096880" data-api-returntype="File" /></p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                </td>
-                <td style="width: 86.131%; height: 435px;"></td>
-            </tr>
-            <tr style="height: 150px;">
-                <td style="width: 13.774%; height: 150px;">
-                    <p><img src="https://canvas.uva.nl/courses/8175/files/7105271/download" data-inst-icon-maker-icon="true" data-download-url="https://canvas.uva.nl/files/7105271/download?download_frd=1&amp;icon_maker_icon=1" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7105271" data-api-returntype="File" /></p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                </td>
-                <td style="width: 86.131%; height: 150px;">
-                    <p>&nbsp;</p>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <p><iframe title="embedded content" src="https://amsuni.sharepoint.com/sites/FMG_EDU_Soc_Wet/_layouts/15/Doc.aspx?sourcedoc={0ff1def0-bb88-4f00-b37e-e6d4dec9d4f7}&amp;action=embedview" width="100%" height="800px"></iframe></p>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
     <hr />
