Alle veranderingen mbt pagina's TestVision & nieuwsbrief livegang

--- a/A-Z/Exams/TestVision/22-23/2_Examination_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/2_Examination_22-23.html
@@ -1,15 +1,26 @@
+<!-- Banner -->
 <p><img style="width: 100%;" src="https://canvas.uva.nl/courses/8175/files/5129479/preview" alt="2021:22bannertvo-1.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5129479" data-api-returntype="File" /></p>
+
+<!-- Back to top -->
 <p><a id="topmenu"></a></p>
+
+<!-- Menubalk -->
 <div class="grid-row">
     <div class="col-xs-12 col-md-12">
         <div class="styleguide-section__grid-demo-element">
-            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;"><a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175"><i class="icon-home"></i> <span>&nbsp;Home</span> </a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/a-z" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/a-z" data-api-returntype="Page"><i class="icon-copy-course"></i> <span>&nbsp;A-Z</span> </a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/enroll/N3HMY8" data-api-returntype="Page">&nbsp;<i class="icon-discussion-new">&nbsp;</i>Enroll</a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/online-and-hybrid-tools" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/online-and-hybrid-tools"><span style="color: #ef5625;"><i class="icon-info"></i><strong>&nbsp;Online &amp; Hybrid teaching</strong></span></a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool"><span style="color: #ef5625;"><i class="icon-info"></i><strong>&nbsp;Final Grades</strong></span></a>&nbsp;</div>
+            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;">
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175"><i class="icon-home"></i> <span>&nbsp;Home</span> </a>
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/a-z" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/a-z" data-api-returntype="Page"><i class="icon-copy-course"></i> <span>&nbsp;A-Z</span> </a>
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/enroll/N3HMY8" data-api-returntype="Page">&nbsp;<i class="icon-discussion-new">&nbsp;</i>Enroll</a>
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision"><span style="color: #08a8a2;"><i class="icon-home"></i><strong>&nbsp;TestVision homepage</strong></span></a>
+            </div>
         </div>
     </div>
 </div>
+
+
 <div>
     <hr />
-    <p>&nbsp;</p>
     <table style="border-collapse: collapse; width: 98.1164%; border-style: hidden; height: 53px;" border="0">
         <tbody>
             <tr style="height: 43px;">
@@ -26,15 +37,12 @@
             <tr style="height: 10px;">
                 <td style="width: 33.3033%; height: 10px; text-align: center;">
                     <p><a class="inline_disabled" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" target="_self" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/testvision-instructions-%7C-questions-and-test" data-api-returntype="Page"><img src="https://canvas.uva.nl/courses/8175/files/7137620/download" width="130px" data-inst-icon-maker-icon="true" data-download-url="https://canvas.uva.nl/files/7137620" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7137620" data-api-returntype="File" /></a></p>
-                    <p><img src="https://canvas.uva.nl/courses/8175/files/7096925/download" width="40" height="40" data-inst-icon-maker-icon="true" data-download-url="https://canvas.uva.nl/files/7096925/download?download_frd=1&amp;icon_maker_icon=1" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7096925" data-api-returntype="File" />&nbsp; 5 days before exam</p>
                 </td>
                 <td style="width: 33.3033%; height: 10px; text-align: center;">
                     <p><img src="https://canvas.uva.nl/courses/8175/files/7137618/download" width="130px" data-inst-icon-maker-icon="true" data-download-url="https://canvas.uva.nl/files/7137618" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7137618" data-api-returntype="File" /></p>
-                    <p>&nbsp;</p>
                 </td>
                 <td style="width: 33.3061%; height: 10px; text-align: center;">
                     <p><a class="inline_disabled" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-assessment" target="_self" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/testvision-instructions-%257C-assessment" data-api-returntype="Page"><img src="https://canvas.uva.nl/courses/8175/files/7137622/download" width="130px" data-inst-icon-maker-icon="true" data-download-url="https://canvas.uva.nl/files/7137622/" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7137622" data-api-returntype="File" /></a></p>
-                    <p>&nbsp;</p>
                 </td>
             </tr>
         </tbody>
@@ -42,8 +50,10 @@
     <hr />
     <p><iframe title="embedded content" src="https://amsuni.sharepoint.com/sites/FMG_EDU_Soc_Wet/_layouts/15/Doc.aspx?sourcedoc={c2faa668-2a9d-4cc8-9bb4-961d69d83e0e}&amp;action=embedview&amp;wdEmbedCode=0&amp;wdPrint=0" width="100%" height="800px"></iframe></p>
     <p>&nbsp;</p>
-    <p>&nbsp;</p>
     <hr />
+    <p>&nbsp;</p>
+    <p><iframe title="embedded content" src="https://amsuni.sharepoint.com/sites/FMG_EDU_Soc_Wet/_layouts/15/Doc.aspx?sourcedoc={8e01fea3-17a2-4834-b24a-76a3cac4fde0}&amp;action=embedview&amp;wdEmbedCode=0&amp;wdPrint=0" width="100%" height="800px"></iframe></p>
+    <p>&nbsp;</p>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
 </div>
