--- a/A-Z/Homepage/AZ-Homepage_22-23.html
+++ b/A-Z/Homepage/AZ-Homepage_22-23.html
@@ -38,7 +38,7 @@
                     <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; background-color: #fafafa; padding: 15px;">
 
                         <!-- Titel -->
-                        <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #BFCEE1; background-color: #F1F4F9; height: 50px; text-align: center; width: auto;">
+                        <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; background-color: #F1F4F9; height: 50px; text-align: center; width: auto;">
                             <p style="text-align: left;">
                                 <span style="line-height: 100%; font-size: 21pt; float: middle; text-align: center; color: #014AAD;">&nbsp; &nbsp; Topics A-Z</span>
                             </p>
@@ -162,7 +162,7 @@
                     <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; background-color: #fafafa; padding: 15px;">
 
                         <!-- Titel -->
-                        <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #BFCEE1; background-color: #F1F4F9; height: 50px; text-align: center; width: auto;">
+                        <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; background-color: #F1F4F9; height: 50px; text-align: center; width: auto;">
                             <p style="text-align: left;">
                                 <span style="line-height: 100%; font-size: 21pt; float: middle; text-align: center; color: #014AAD;">&nbsp; &nbsp; Tools A-Z</span>
                             </p>
@@ -243,7 +243,7 @@
 
                             <!-- TestVision -->
                             <p>
-                                <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="TestVision" href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals" target="" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/overview-testvision-manuals" data-api-returntype="Page">
+                                <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="TestVision" href="https://canvas.uva.nl/courses/8175/pages/testvision" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page">
                                     <img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/4378110/preview" alt="TEELEN-Logo-RGB.png" width="43" height="43" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4378110" data-api-returntype="File" /><span style="color: #000000;">TestVision</span>
                                 </a>
                             </p>
@@ -1082,7 +1082,7 @@
                                     <p><strong>&nbsp;</strong></p>
                                 </td>
                                 <td style="width: 22.3964%;">
-                                    <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/overzicht-testvision-handleidingen" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/overzicht-testvision-handleidingen" data-api-returntype="Page">
+                                    <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page">
                                         <span>View more</span>
                                     </a>
                                 </td>
