--- a/Homepage/22_23.html
+++ b/Homepage/22_23.html
@@ -103,7 +103,7 @@
                         New in <img style="width: auto; float: center; height: 30px; vertical-alignment: center; vertical-align: center; margin-left: 5px;" src="https://canvas.uva.nl/courses/8175/files/7105590/preview" alt="2223.png" width="109" height="30" />
 
                         <!-- Newsletter -->
-                        <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto; margin-top: 20px; padding-bottom: 20px;" title="" href="https://canvas.uva.nl/courses/8175/pages/online-and-hybrid-tools" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/online-and-hybrid-tools" data-api-returntype="Page">
+                        <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto; margin-top: 20px; padding-bottom: 20px;" title="" href="https://canvas.uva.nl/courses/8175/pages/icto-newsletter" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/icto-newsletter" data-api-returntype="Page">
                             <h5><span style="font-size: 15pt; color: #014AAD;"><strong>ICTO NEWSLETTER</strong></span></h5>
                             <span style="font-size: 11pt; color: #34495e;"><em>Edition: September 2022, Block 1</em></span>
                         </a>
@@ -150,7 +150,7 @@
                         </a>
                         <a id="" class="Button Button--large" style="width: 92%; height: 20%; text-align: left; margin-left: auto; margin-top: 20px; padding-bottom: 20px; border-color: #063852; title="" href="https://datanose.nl/#canvas[FMG]" data-api-endpoint="https://datanose.nl/#canvas[FMG]" data-api-returntype="Page">
                             <h5><span style="font-size: 14pt; color: #014AAD;">Sandbox course</span></h5>
-                            <span style="font-size: 10pt; color: #124240;"><em>Create and empty Canvas course for you to practice in.</em></span>
+                            <span style="font-size: 10pt; color: #124240;"><em>Create an empty Canvas course for you to practice in.</em></span>
                         </a>
                         <a id="" class="Button Button--large" style="width: 92%; height: 20%; text-align: left; margin-left: auto; margin-top: 20px; padding-bottom: 20px; border-color: #063852; title="" href="https://canvas.uva.nl/enroll/4TTA6N" data-api-endpoint="https://canvas.uva.nl/enroll/4TTA6N" data-api-returntype="Page">
                             <h5><span style="font-size: 14pt; color: #014AAD;">Onboarding student assistents</span></h5>
