--- a/Nieuwsbrief/Nieuwsbrief22-23.html
+++ b/Nieuwsbrief/Nieuwsbrief22-23.html
@@ -163,7 +163,7 @@
                   upgrades to the process and experience of digital examination with <i>TestVision</i>!
                 </p>
                 <p style="font-size: 12pt">
-                    <a class="icon-question" href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"> Click here to find our current <i>TestVision</i> manual</a>
+                    <a class="icon-question" href="https://canvas.uva.nl/courses/8175/pages/testvision"> Click here to find our <i>TestVision</i> page</a>
                 </p>
             </td>
             <td style="width:50%; vertical-align: top; padding-right: 15px">
