--- a/A-Z/Exams/TestVision/22-23/4_Complete-instruction_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/4_Complete-instruction_22-23.html
@@ -1,26 +1,23 @@
+<!-- Banner -->
+<p><img style="width: 100%;" src="https://canvas.uva.nl/courses/8175/files/5129479/preview" alt="2021:22bannertvo-1.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5129479" data-api-returntype="File" /></p>
 
-<img src="https://canvas.uva.nl/courses/8175/files/5129479/preview" alt="2021:22bannertvo-1.jpg" style="width: 100%;" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/1534931" data-api-returntype="File" />
-<p>
-    <a id="topmenu"></a>
-</p>
+<!-- Back to top -->
+<p><a id="topmenu"></a></p>
+
+<!-- Menubalk -->
 <div class="grid-row">
     <div class="col-xs-12 col-md-12">
         <div class="styleguide-section__grid-demo-element">
             <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;">
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175"><i class="icon-home"></i>
-                    <span>&nbsp;Home</span>
-                </a>
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/a-z" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/a-z" data-api-returntype="Page"><i class="icon-copy-course"></i>
-                    <span>&nbsp;A-Z</span>
-                </a>
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175"><i class="icon-home"></i> <span>&nbsp;Home</span> </a>
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/a-z" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/a-z" data-api-returntype="Page"><i class="icon-copy-course"></i> <span>&nbsp;A-Z</span> </a>
                 <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/enroll/N3HMY8" data-api-returntype="Page">&nbsp;<i class="icon-discussion-new">&nbsp;</i>Enroll</a>
-                <!--<a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/overzicht-testvision-handleidingen" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/overzicht-testvision-handleidingen">&nbsp;<i class="icon-flag">&nbsp;</i>Dutch</a>-->
-                <a class="btn Button" style="margin: 5px;" href="https://uvasocialsciences.eu.qualtrics.com/jfe/form/SV_6LN3bIFUlzyJ95k" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-compose"></i>
-                <span>&nbsp;</span>Send us your feedback</a>
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision"><span style="color: #08a8a2;"><i class="icon-home"></i><strong>&nbsp;TestVision homepage</strong></span></a>
             </div>
         </div>
     </div>
 </div>
+
 <div class="enhanceable_content tabs">
     <ul>
         <li>
