--- a/CCSi/Homepage_FOUNDATION2.html
+++ b/CCSi/Homepage_FOUNDATION2.html
@@ -1,5 +1,5 @@
 
-<p><img src="https://canvas.uva.nl/courses/32823/files/7124968/preview" alt="Banner-UNDER CONSTRUCTION3.png" /></p>
+<p><img src="https://canvas.uva.nl/courses/32823/files/7158649/preview" alt="CCSci_banner_1.png" /></p>
 
 <!-- Banner hoger
 <p><img src="https://canvas.uva.nl/courses/32823/files/7124891/preview" alt="Banner-UNDER CONSTRUCTION.png" /></p>
@@ -29,22 +29,13 @@
 </div>
 -->
 
-
-
-<blockquote style="padding-top: 10px; padding-bottom: 10px;">
-    <span style="color: #124240; font-family: helvetica neue;">
-
-            <span style="font-size: 16px;">Shape society <span style="text-decoration: underline;">today</span>, schape the future <span style="text-decoration: underline;">tomorrow</span>. Data for sustainable solutions.</span>
-
-    </span>
-</blockquote>
-
 <!-- Alternative blockquote: titel cursus verkorten naar "FOUNDATION" en volledige titel onder banner weergeven
 <blockquote style="padding-top: 10px; padding-bottom: 10px; font-color: #8fa674;">
         <span style="font-size: 20px; font-color; #8fa674;">FOUNDATION: Appreciating the complexity of social challenges</span>
 </blockquote>-->
 
 <!-- Tab vakjes (aanklikbare menu) -->
+<h3><b>FOUNDATION: Appreciating the complexity of social challenges</b></h3>
 <div class="enhanceable_content tabs">
     <ul>
         <li>
@@ -93,7 +84,77 @@
 
     <div id="tab-1" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
 
-        <!-- Tabel modules-->
+
+        <!--Buttons-->
+        <a id="" class="Button Button--large" style="width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #8FA674; title="All modules" href="https://canvas.uva.nl/courses/32823/modules">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">All modules</span>
+        </a>
+        <a id="" class="Button Button--large" style="width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8FA674; title="Week 1: September 5-9" href="/courses/32823/modules/278774">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 1: September 5-9</span>
+        </a>
+        <a id="" class="Button Button--large" style="width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8FA674; title="Week 2: September 12-16" href="/courses/32823/modules/278775">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 2: September 12-16</span>
+        </a>
+        <a id="" class="Button Button--large" style="width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8FA674; title="Week 3: September 19-23" href="/courses/32823/modules/278776">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 3: September 19-23</span>
+        </a>
+        <a id="" class="Button Button--large" style="width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8FA674; title="Week 4: September 26-30" href="/courses/32823/modules/279670">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 4: September 26-30</span>
+        </a>
+        <a id="" class="Button Button--large" style="width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8FA674; title="Week 5: October 3-7" href="/courses/32823/modules/279669">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 5: October 3-7</span>
+        </a>
+        <a id="" class="Button Button--large" style="width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8FA674; title="Week 6: October 10-14" href="/courses/32823/modules/278779">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 6: October 10-14</span>
+        </a>
+        <a id="" class="Button Button--large" style="width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8FA674; title="Week 7: October 17-21" href="/courses/32823/modules/279668">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 7: October 17-21</span>
+        </a>
+        <a id="" class="Button Button--large" style="width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8FA674; title="Week 8: October 24-28" href="/courses/32823/modules/279667">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 8: October 24-28</span>
+        </a>
+        <a id="" class="Button Button--large" style="width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8FA674; title="Week 9: October 31 - November 4" href="/courses/32823/modules/279666">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 9: October 31 - November 4</span>
+        </a>
+        <a id="" class="Button Button--large" style="width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8FA674; title="Week 10: November 7-11" href="/courses/32823/modules/278780">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 10: November 7-11</span>
+        </a>
+        <a id="" class="Button Button--large" style="width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8FA674; title="Week 11: November 14-18" href="/courses/32823/modules/279665">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 11: November 14-18</span>
+        </a>
+        <a id="" class="Button Button--large" style="width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8FA674; title="Week 12: November 21-25" href="/courses/32823/modules/279676">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 12: November 21-25</span>
+        </a>
+        <a id="" class="Button Button--large" style="width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8FA674; title="Week 13: November 28 - December 2" href="/courses/32823/modules/279677">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 13: November 28 - December 2</span>
+        </a>
+        <a id="" class="Button Button--large" style="width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8FA674; title="Week 14: December 5-9" href="/courses/32823/modules/279678">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 14: December 5-9</span>
+        </a>
+        <a id="" class="Button Button--large" style="width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8FA674; title="Week 15: December 12-16" href="/courses/32823/modules/279675">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 15: December 12-16</span>
+        </a>
+        <a id="" class="Button Button--large" style="width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8FA674; title="Week 16: December 19-23" href="/courses/32823/modules/279680">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 16: December 19-23</span>
+        </a>
+        <a id="" class="Button Button--large" style="width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8FA674; title="Week 17: January 9-13" href="/courses/32823/modules/279681">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 17: January 9-13</span>
+        </a>
+        <a id="" class="Button Button--large" style="width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8FA674; title="Week 18: January 16-20" href="/courses/32823/modules/279679">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 18: January 16-20</span>
+        </a>
+        <a id="" class="Button Button--large" style="width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8FA674; title="WWeek 19: January 23-27" href="/courses/32823/modules/278778">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 19: January 23-27</span>
+        </a>
+        <a id="" class="Button Button--large" style="width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8FA674; title="WWeek 19: January 23-27" href="/courses/32823/modules/278778">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 19: January 23-27</span>
+        </a>
+        <a id="" class="Button Button--large" style="width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8FA674; title="Week 20: January 30 - February 3" href="/courses/32823/modules/279682">
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 20: January 30 - February 3</span>
+        </a>
+
+
+        <!-- Tabel
         <table style="border-collapse: collapse; width: 92.4771%;  border-color: #8fa674; border-style: hidden;" border="1">
             <tbody>
                 <tr>
@@ -160,9 +221,9 @@
                     <td style="width: 99.9008%;"><p><a title="Week 20: January 30 - February 3" href="/courses/32823/modules/279682">Week 20: January 30 - February 3</a></p></td>
                 </tr>
             </tbody>
-        </table>
+        </table>-->
 
-        <!-- Links module
+        <!-- Links
         <p><a title="Introduction" href="/courses/32823/modules/274880">Introduction</a></p>
         <p><a title="Week 1:  September 5-9 (The First Two Weeks) - still the previous setup" href="/courses/32823/modules/278774">Week 1: September 5-9</a></p>
         <p><a title="Week 2: September 12-16 (The First Two Weeks) - still the previous setup" href="/courses/32823/modules/278775">Week 2: September 12-16</a></p>
