Veranderingen CCSci en nieuwsbrief

--- a/CCSi/Homepage_FOUNDATION_3_Test.html
+++ b/CCSi/Homepage_FOUNDATION_3_Test.html
@@ -1,47 +1,12 @@
-
-
-<!-- Banner met SSCci titel
-<p><img src="https://canvas.uva.nl/courses/32823/files/7158649/preview" alt="CCSci_banner_1.png" /></p>-->
-
-<!-- Banner drieluik foto
-<p><img src="https://canvas.uva.nl/courses/32823/files/7158660/preview" alt="CCSci_banner_2.png" /></p>-->
-
-<!-- Banner new design
-<p><img src="https://canvas.uva.nl/courses/32823/files/7162303/preview" alt="CSSci (3).png" /></p>-->
-
-<!-- new design2
-<p><img src="https://canvas.uva.nl/courses/32823/files/7162338/preview" alt="CSSci (8).png" /></p>-->
-
-<p><img src="https://canvas.uva.nl/courses/32823/files/7162344/preview" alt="CSSci (9).png" /></p>
-
-<!-- menu bar
-<div class="grid-row">
-    <div class="col-xs-12 col-md-20">
-        <div class="styleguide-section__grid-demo-element">
-            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;">
-                <a class="btn Button" style="margin: 5px;" href=""><i class="icon-home"></i>
-                    <span>&nbsp;Home</span>
-                </a>
-                <a class="btn Button" style="margin: 5px;" href="" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/a-z" data-api-returntype="Page"><i class="icon-copy-course"></i>
-                    <span>&nbsp;A-Z</span>
-                </a>
-                <a class="btn Button" style="margin: 5px;" href="" data-api-returntype="Page">&nbsp;<i class="icon-discussion-new">&nbsp;</i>Enroll</a>
-                <a class="btn Button" style="margin: 5px;" href="" data-api-returntype="Page"><span style="color: #EF5625;"><i class="icon-info"></i><strong>&nbsp;Final Grades menu</strong></span></a>
-                <a class="btn Button" style="margin: 5px;" href="" data-api-returntype="Page"><span style="color: #EF5625;"><i class="icon-info"></i><strong>&nbsp;Digital exams</strong></span></a>
-            </div>
-        </div>
-    </div>
+<div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #1e1e1e; border-width: 2px; padding: 11px; padding-left: 17px; height: auto; background-color: #8fa674;">
+    <h4 style="color: #ffffff;">FOUNDATION: Appreciating the complexity of social challenges</h4>
 </div>
--->
 
 
-<!-- Alternative blockquote: titel cursus verkorten naar "FOUNDATION" en volledige titel onder banner weergeven
-<blockquote style="padding-top: 10px; padding-bottom: 10px; font-color: #8fa674;">
-        <span style="font-size: 20px; font-color; #8fa674;">FOUNDATION: Appreciating the complexity of social challenges</span>
-</blockquote>-->
+<!-- Banner drieluik foto -->
+<p><img src="https://canvas.uva.nl/courses/32823/files/7158660/preview" alt="CCSci_banner_2.png" /></p>
 
 <!-- Tab vakjes (aanklikbare menu) -->
-<h3 style="margin: 5px; margin-bottom: 15px; color: #1e1e1e;"><b>FOUNDATION: Appreciating the complexity of social challenges</b></h3>
 <div class="enhanceable_content tabs">
     <ul>
         <li>
@@ -91,67 +56,67 @@
     <div id="Modules" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
 
         <!--Buttons-->
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #f9e663; title="All modules" href="https://canvas.uva.nl/courses/32823/modules">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #f9e663; title="All modules" href="https://canvas.uva.nl/courses/32823/modules">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">All modules</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 1: September 5-9" href="/courses/32823/modules/278774">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 1: September 5-9" href="/courses/32823/modules/278774">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 1: September 5-9</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 2: September 12-16" href="/courses/32823/modules/278775">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 2: September 12-16" href="/courses/32823/modules/278775">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 2: September 12-16</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 3: September 19-23" href="/courses/32823/modules/278776">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 3: September 19-23" href="/courses/32823/modules/278776">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 3: September 19-23</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 4: September 26-30" href="/courses/32823/modules/279670">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 4: September 26-30" href="/courses/32823/modules/279670">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 4:  September 26-30</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 5: October 3-7" href="/courses/32823/modules/279669">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 5: October 3-7" href="/courses/32823/modules/279669">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 5:  October 3-7</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 6: October 10-14" href="/courses/32823/modules/278779">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 6: October 10-14" href="/courses/32823/modules/278779">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 6:  October 10-14</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 7: October 17-21" href="/courses/32823/modules/279668">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 7: October 17-21" href="/courses/32823/modules/279668">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 7: October 17-21</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 8: October 24-28" href="/courses/32823/modules/279667">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 8: October 24-28" href="/courses/32823/modules/279667">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 8:  October 24-28</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 9: October 31 - November 4" href="/courses/32823/modules/279666">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 9: October 31 - November 4" href="/courses/32823/modules/279666">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 9:  October 31 - November 4</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 10: November 7-11" href="/courses/32823/modules/278780">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 10: November 7-11" href="/courses/32823/modules/278780">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 10:  November 7-11</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 11: November 14-18" href="/courses/32823/modules/279665">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 11: November 14-18" href="/courses/32823/modules/279665">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 11:  November 14-18</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 12: November 21-25" href="/courses/32823/modules/279676">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 12: November 21-25" href="/courses/32823/modules/279676">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 12:  November 21-25</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 13: November 28-  December 2" href="/courses/32823/modules/279677">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 13: November 28-  December 2" href="/courses/32823/modules/279677">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 13:  November 28 - December 2</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 14: December 5-9" href="/courses/32823/modules/279678">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 14: December 5-9" href="/courses/32823/modules/279678">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 14:  December 5-9</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 15: December 12-16" href="/courses/32823/modules/279675">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 15: December 12-16" href="/courses/32823/modules/279675">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 15:  December 12-16</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 16: December 19-23" href="/courses/32823/modules/279680">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 16: December 19-23" href="/courses/32823/modules/279680">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 16:  December 19-23</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 17: January 9-13" href="/courses/32823/modules/279681">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 17: January 9-13" href="/courses/32823/modules/279681">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 17:  January 9-13</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 18: January 16-20" href="/courses/32823/modules/279679">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 18: January 16-20" href="/courses/32823/modules/279679">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 18:  January 16-20</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="WWeek 19: January 23-27" href="/courses/32823/modules/278778">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="WWeek 19: January 23-27" href="/courses/32823/modules/278778">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 19:  January 23-27</span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 20: January 30 - February 3" href="/courses/32823/modules/279682">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 20: January 30 - February 3" href="/courses/32823/modules/279682">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 20:  January 30 - February 3</span>
         </a>
 
